перезапуск кэмулятора через ProcessBuilder